# bills_analysis

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  PoC.md  README.md  SESSION_NOTES.md  pyproject.toml  requirments_engineering.md
.agents/skills/context-handoff/: SKILL.md
.agents/skills/cross-worktree-sync/: SKILL.md
.claude/rules/: api-contract.md  collaboration-boundaries.md  dod-and-safety.md  session-handoff.md
.codex/: config.toml
cli/: main.py
frontend/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: main.jsx
frontend/src/app/: App.jsx  AppFrame.jsx  PlaceholderPage.jsx  routes.jsx  styles.css
frontend/src/config/: env.js
frontend/src/contracts/: v1.schema.js  v1.schema.test.js  v1.types.js
scripts/: export_openapi_v1.py  session_notes.py
src/bills_analysis/: __init__.py  cleanup.py  cli.py  contracts.py  excel_ops.py  extract_by_azure_api.py  preprocess.py  render.py  text_extraction.py  vlm.py
src/bills_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: cleanup_outputs.py  config.json  json_to_excel_map.py  json_to_excel_office.py  merge_daily_excel.py  merge_excel_entry.py  merge_office_excel.py  openapi_v1_baseline.json  run_with_category.py  score_thresholds.json  test_api_e2e_smoke.py  test_api_schema_v1.py  test_cleanup_report_parity.py  test_cli.py  test_excel_mapping_parity.py  test_llm.py  test_merge_parity.py  test_pipeline_parity.py  vlm_pipeline_api.py  vlm_pipeline_old.py  vlm_pipeline_report.py
(+57 files in other folders)
