[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bills_analysis"
version = "0.1.0"
description = "Local backend CLI for invoice VLM extraction PoC (Ollama vision-first)."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "rich>=13.7",
    "pymupdf>=1.23",
    "pillow>=10.2",
    "numpy<2.0.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
invoice = "bills_analysis.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# No specific environment overrides needed for local installation.
